# ocaml-light

./: .codemapignore  .depend  .dockerignore  .gitignore  Dockerfile  Dockerfile.plan9  FIX_AND_MERGE_for_plan9  Makefile  OCaml.nw  OCaml_extra.nw  REMOVE_OBJ  REMOVE_OBJ.patch  authors.txt  changes.orig  changes.txt  configure  copyright.txt  diff_with_record  dune  dune-project  list_byterun  list_comp  list_lex  list_ocamlc  list_ocamlopt  list_other  list_typing  list_yacc  mkfile  old.nw  pad.org  pad.txt  ported.txt  project.el  readme.txt  semgrep.jsonnet  shell.nix  skip_list.txt  todo.org  todo.txt
TODO/: diff1_forkpoint  diff_hack_m32  remain_diffs.txt
asmcomp/: all.ml  asmgen.ml  asmgen.mli  asmlibrarian.ml  asmlibrarian.mli  asmlink.ml  asmlink.mli  clambda.ml  clambda.mli  closure.ml  closure.mli  cmm.ml  cmm.mli  cmmgen.ml  cmmgen.mli  codegen.ml  codegen.mli  coloring.ml  coloring.mli  compilenv.ml  compilenv.mli  dune  emit.mli  emitaux.ml  emitaux.mli  interf.ml  interf.mli  linearize.ml  linearize.mli  liveness.ml  liveness.mli  mach.ml  mach.mli  printcmm.ml  printcmm.mli  printlinear.ml  printlinear.mli  printmach.ml  printmach.mli  proc.mli  (+15 more)
asmrun/: Makefile  alpha.S  arm.S  array.c  fail.c  hppa.S  i386.S  i386nt.asm  m68k.S  mips.S  (+7 more)
driver/: compile.ml  compile.mli  dune  errors.ml  errors.mli  main.ml  optcompile.ml  optcompile.mli  opterrors.ml  opterrors.mli  optmain.ml
lex/: .depend  Lexgen.ml  Makefile  compact.ml  compact.mli  dune  lexer.mli  lexer.mll  lexgen.ml  lexgen.mli  main.ml  output.ml  output.mli  parser.mly  syntax.mli
(+786 files in other folders)
