(library
 (name driver_byte)
 (wrapped false)
 (modules
    compile errors main
 )
 (libraries
    parsing typing bytecomp
  )
 (preprocess (pps ppx_deriving.show))
)

(library
 (name driver_opt)
 (wrapped false)
 (modules
    optcompile opterrors optmain
 )
 (libraries
    parsing typing bytecomp asmcomp
  )
 (preprocess (pps ppx_deriving.show))
)

