(executable
 (name main)
 (libraries
   str unix
 )
 ; 'byte' is for ocamldebug
 (modes native byte))

; lex
(ocamllex lexer)
; yacc
; old: (ocamlyacc parser)
(rule
 (targets parser.ml parser.mli)
 (deps parser.mly)
 (action
  (progn
   (run ocamlyacc %{dep:parser.mly})
   ; must take: /*(*s: copyright ocamlyacc *)*/
   ; and just remove it
   (run perl -p -i -e "s#/[*].*[sex]:.*[*]/##" parser.ml)
   )))
